namespace Strawhenge.Inventory.Unity.Animation
{
    public static class AnimatorParameters
    {
        public const string DrawItemAnimationId = "DrawItem_AnimationId";

        public const string DrawItem = "DrawItem";

        public const string PutAwayItemAnimationId = "PutAwayItem_AnimationId";

        public const string PutAwayItem = "PutAwayItem";

        public const string HoldItemAnimationId = "HoldItem_AnimationId";

        public const string ConsumeItem = "ConsumeItem";

        public const string ConsumeItemAnimationId = "ConsumeItem_AnimationId";

        public const string ConsumeItemInverted = "ConsumeItem_Inverted";
        
        public const string Interrupt = "Interupt";
    }
}